--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
-    "start:dev": "nodemon server.ts"
+    "start": "node dist/src/server.js",
+    "start:dev": "nodemon src/server.ts"
   },
   "author": "",
   "license": "ISC",
