--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,15 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "rootDir": "./",
+    "rootDir": "./src",
     "outDir": "./dist",
     "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "strict": true,
     "skipLibCheck": true,
-    "typeRoots": ["./node_modules/@types", "./@types"]
+    "typeRoots": ["./node_modules/@types", "./src/@types"],
   },
-  "include": ["dd3challenge/**/*.ts", "@types/**/*.d.ts"],
+  "include": ["src/**/*.ts", "@types/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
