--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,7 @@
     "username": "postgres",
     "password": "dd3",
     "database": "challenge",
-    "entities": ["src/entity/**/*.ts"],
+    "entities": ["src/entity/*.ts"],
     "synchronize": true
   }
   
